API Authentication
 * added grant usage, create on schema public, added alter database owner to trayzn

 * added flyway-local.sh, added bookmarks table migration, added initial BookmarkRepository, updated favicon url in Bookmark DTO to be optional

 * spring data annotations for Bookmark DTO

 * basic bookmark tests, add opens to build configuration

 * cleanup, security updates